tests/__snapshots__/api-toAcceptProps-trailing-comma-stderr.snap.txt
Error: Component accepts props of the given type.

  13 |   expect(
  14 |     Button,
  15 |   ).type.not.toAcceptProps({ text: "Send" }); // fail
     |              ~~~~~~~~~~~~~
  16 |   expect(Button,
  17 |   ).type.not.toAcceptProps({ text: "Clear", type: "reset" as const }); // fail
  18 | 

       at ./__typetests__/toAcceptPropsText.tst.tsx:15:14 ❭ accepts props?

Error: Component accepts props of the given type.

  15 |   ).type.not.toAcceptProps({ text: "Send" }); // fail
  16 |   expect(Button,
  17 |   ).type.not.toAcceptProps({ text: "Clear", type: "reset" as const }); // fail
     |              ~~~~~~~~~~~~~
  18 | 
  19 |   expect(
  20 |     Button  ,

       at ./__typetests__/toAcceptPropsText.tst.tsx:17:14 ❭ accepts props?

Error: Component does not accept props of the given type.

Property 'text' is missing in type '{}' but required in type 'ButtonProps'.

  19 |   expect(
  20 |     Button  ,
  21 |   ).type.toAcceptProps({}); // fail
     |          ~~~~~~~~~~~~~
  22 | });
  23 | 

       at ./__typetests__/toAcceptPropsText.tst.tsx:21:10 ❭ accepts props?

    'text' is declared here. ts(2728)

      2 | 
      3 | interface ButtonProps {
      4 |   text: string;
        |   ~~~~
      5 |   type?: "reset" | "submit";
      6 | }
      7 | 

          at ./__typetests__/toAcceptPropsText.tst.tsx:4:3

